# Rin-UI

./: .git-cliff.toml  .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.MD  README.md  pyproject.toml  requirements.txt
.github/workflows/: build.yml  python-publish.yml
RinUI/: __init__.py  qmldir
RinUI/components/: ContextMenu.qml  Indicator.qml  qmldir
RinUI/components/BasicInput/: ComboBox.qml  RoundButton.qml
RinUI/components/DateAndTime/: Calendar.qml  CalendarDatePicker.qml  DatePicker.qml
RinUI/components/DialogsAndFlyouts/: Flyout.qml  Popup.qml
RinUI/components/ListAndCollections/: ListView.qml  ListViewDelegate.qml
RinUI/components/Media/: Avatar.qml
RinUI/components/MenusAndToolbars/: TextInputMenu.qml
RinUI/components/Navigation/: NavigationBar.qml  NavigationItem.qml  NavigationSubItem.qml  NavigationView.qml
RinUI/components/StatusAndInfo/: InfoBar.qml  ProgressRing.qml
RinUI/components/Text/: AutoSuggestBox.qml  ScrollableTextArea.qml  TextArea.qml  TextField.qml
RinUI/core/: config.py  launcher.py  theme.py  translator.py  window.py
RinUI/hooks/: __init__.py
RinUI/languages/: zh_CN.qm
RinUI/themes/: theme.qml  utils.qml
RinUI/windows/: CtrlBtn.qml  FluentWindow.qml  FluentWindowBase.qml  TitleBar.qml  WindowManager.qml
RinUI/windows/window/: Window.qml
docs/: README_zhCN.MD  ToDo.MD
examples/: config.py  gallery.py  gallery.qml
examples/assets/: ItemData.qml
examples/components/: ControlClip.qml  ControlShowcase.qml  LinkClip.qml  qmldir
examples/languages/: en_US.ts  zh_CN.qm  zh_CN.ts
examples/pages/: Home.qml  Media.qml  Search.qml  Settings.qml  StatusAndInfo.qml
examples/pages/controls/: AutoSuggestBox.qml  Avatar.qml  Button.qml  CalendarDatePicker.qml  CalendarView.qml  DatePicker.qml  Flyout.qml  Hyperlink.qml  ListView.qml  PillButton.qml  Popup.qml  ProgressBar.qml  ProgressRing.qml  RadioButton.qml  RoundButton.qml  Segmented.qml  SelectorBar.qml  SettingExpander.qml  Slider.qml  TextArea.qml  TextField.qml  ToolTip.qml
scripts/: package_gallery.bat  update_testpypi.bat  update_ts.bat
test/: main.py  test1.qml  test2.qml  test3.qml
test/Components/: qmldir
